[package]
name = "fgbgg"
version = "0.1.0"
authors = ["Madolkke <madolchepalooza@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.49", default-feature = false, features = ["opencv-4", "contrib", "buildtime-bindgen"] }
clap = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
image = "*"
rand = "*"